* Wed Apr 16 2014 Martin Kolman <martin.kolman@gmail.com> - 0.46.1
- local search works again thanks to a patch provided by Geoff Kuenning - thanks a lot ! :)
- it is now possible to set local search radius in the GTK GUI (in options and directly in the search menu with a toggle button)
- map display and dragging should now be faster
- automatic map tile downloading has been rewritten and should be now more efficient
- batch tile download has been rewritten and improved - should be now more efficient and faster
- the tile hnadling code is now in much better shape overall
- the batch tile menu in GTK GUI no longer lags and has a more logical structure
- fix tile downloading not working in Sailfish GUI due to Python 3.4 breaking old bundled version of Urllib 3
* Tue Mar 11 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.7
- fix the Map1.eu and mtbmap layers not showing up in the map layer menu
* Sun Mar 09 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.6
- also show scroll decorator on the map layer selector in Sailfish GUI
* Sun Mar 09 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.5
- fix speed display page in Qt 5/Sailfish GUI
- show distance from current position for all search results in Qt 5/Sailfish GUI
- show scroll decorators for most pages in Sailfish GUI
* Sun Mar 02 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.4
- fix theme color parsing on GTK GUI
  - looks like the Silica theme broke it :)
* Tue Feb 25 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.3
- make page header look more native on Sailfish OS
- tweak landscape and potrait page header size in Qt 5 GUI
- also make it dependent on back button usage (back button needs thicker header)
* Tue Feb 25 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.2
- make sure persistent options are saved after every set in Qt 5 GUI
 - as there seem to be issues with clean shutdow for icon launched packages on Sailfish OS
* Tue Feb 25 2014 Martin Kolman <martin.kolman@gmail.com> - 0.45.1